fix user profile and add reset password